--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.3'
+	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id "org.sonarqube" version "4.0.0.2929"
 	id 'jacoco'
@@ -9,6 +9,7 @@ plugins {
 
 ext {
 	set('junit', "4.13.1")
+	set('springCloudVersion', "2023.0.0")
 }
 
 group = 'br.com.foursales'
@@ -26,6 +27,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -41,7 +43,9 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
 	// Feign Client para comunicação entre microsserviços
-	implementation("org.springframework.cloud:spring-cloud-starter-openfeign:3.1.0")
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'io.github.openfeign:feign-core:12.3' // Atualize para a versão mais recente
+//	implementation group: 'io.github.openfeign', name: 'feign-okhttp'
 
 	// Banco de Dados MySQL
 	runtimeOnly 'com.mysql:mysql-connector-j'
@@ -128,4 +132,9 @@ tasks.withType(Test) {
 	useJUnitPlatform()
 	systemProperty "user.language", "en"
 	systemProperty "user.country", "US"
+}
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
